# pylove

./: .dockerignore  .env.example  .gitignore  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-main-packages.yml  codeql.yml  docs.yml  gitleaks.yml  publish-pypi.yml  tests.yml
compose/: README.md  mosquitto.conf
compose/ha-config/: .gitignore  configuration.yaml
docs/: api-reference.en.md  api-reference.md  api-reference.ru.md  appendix.en.md  appendix.md  appendix.ru.md  changelog.en.md  changelog.ru.md  connection-methods.en.md  connection-methods.md  connection-methods.ru.md  direct-ble.en.md  direct-ble.md  direct-ble.ru.md  index.md  index.ru.md  installation.en.md  installation.ru.md
docs/tutorials/: fastapi-lan-rest.en.md  fastapi-lan-rest.md  fastapi-lan-rest.ru.md  home-assistant-mqtt.en.md  home-assistant-mqtt.md  home-assistant-mqtt.ru.md  lan.md  lan.ru.md  server-qr.md  server-qr.ru.md  socket.md  socket.ru.md  toy-events.md  toy-events.ru.md
examples/: __init__.py  ble_direct_preset_multi.py  ble_direct_scan_and_two.py  ble_direct_send_uart_once.py  fastapi_lan_api.py  ha_mqtt_bridge.py  lan_game_mode.py  patterns_demo.py  server_api.py  socket_api_full.py  toy_events_full.py
lovensepy/: __init__.py  _constants.py  _http_identity.py  _models.py  _utils.py  exceptions.py  patterns.py  toy_type_defaults.py  toy_utils.py
lovensepy/ble_direct/: __init__.py  _ble_marketing_firmware.py  _ble_marketing_map.py  branding_resolve.py  client.py  hub.py  standard_compat.py  sync_hub.py  toy_config_ble_marketing.json  toy_config_ble_marketing_firmware.json  uart_catalog.py  uart_replies.py
lovensepy/integrations/: __init__.py
lovensepy/integrations/mqtt/: __init__.py  discovery.py  ha_bridge.py  state.py  topics.py
lovensepy/security/: __init__.py  cert.py
lovensepy/services/: __init__.py
lovensepy/services/fastapi/: __init__.py  app.py  backend.py  config.py  models.py  monitor.py  openapi.py  scheduler.py  util.py
lovensepy/services/mqtt_bridge/: __init__.py  __main__.py  _cli.py
lovensepy/socket_api/: __init__.py  auth.py  client.py  events.py
lovensepy/standard/: __init__.py  async_base.py  async_lan.py  async_server.py  lan.py  server.py
lovensepy/toy_events/: __init__.py  client.py
lovensepy/transport/: __init__.py  async_http.py  http.py  ws.py
tests/: __init__.py  conftest.py  run_all.py  test_async_clients.py  test_ble_branding_resolve_unit.py  test_ble_direct_hub_unit.py  test_ble_direct_integration.py  test_ble_direct_sync_hub_unit.py  test_ble_direct_unit.py  test_ble_marketing_firmware_unit.py  test_ble_scan_advertisements.py  test_ble_uart_catalog.py  test_connection_methods_sequential.py  test_home_assistant_mqtt_unit.py  test_local.py  test_service_fastapi.py  test_socket.py  test_socket_api_cleanup_unit.py  test_socket_client_unit.py  test_socket_local.py  test_socket_server.py  test_standard_local.py  test_standard_server.py  test_toy_events.py  test_transport_ws_unit.py  test_uart_replies.py  test_unit.py
tests/helpers/: ble_integration_scenario.py  lan_scenarios.py  socket_scenarios.py  socket_session.py  test_utils.py  toy_events_helpers.py
