[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lovensepy"
version = "1.0.6"
description = "Python Lovense API client"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "hyperframe>=6.1.0",
]
keywords = ["lovense", "api", "iot", "teledildonics", "asyncio", "sdk", "mqtt", "home-assistant"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
mqtt = [
    "paho-mqtt>=2.1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
    "paho-mqtt>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/koval01/lovensepy"
Repository = "https://github.com/koval01/lovensepy"
Issues = "https://github.com/koval01/lovensepy/issues"
Documentation = "https://github.com/koval01/lovensepy#readme"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["lovensepy", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "N815",  # mixedCase - Lovense API uses camelCase (nickName, etc.)
    "N806",  # camelCase variables - API/JSON field names
]

[tool.ruff.lint.isort]
known-first-party = ["lovensepy"]

[tool.setuptools.package-data]
lovensepy = ["py.typed"]

[tool.setuptools.packages.find]
include = ["lovensepy*"]
