[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lovensepy"
version = "1.1.1"
description = "Python Lovense API client"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "LovensePy contributors", email = "git@koval-dev.org"}]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "hyperframe>=6.1.0",
]
keywords = ["lovense", "api", "iot", "teledildonics", "asyncio", "sdk", "mqtt", "home-assistant", "ble"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
mqtt = [
    "paho-mqtt>=2.1.0",
]
ble = [
    "bleak>=0.22.0",
    "pick>=2.2.0",
]
service = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
    "pylint>=3.3.0",
    "bandit>=1.8.0",
    "pip-audit>=2.7.0",
    "build>=1.0.0",
    "paho-mqtt>=2.1.0",
    "bleak>=0.22.0",
    "pick>=2.2.0",
    "semgrep>=1.100.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-static-i18n>=1.3.0",
    "pymdown-extensions>=10.0",
]

[project.urls]
Homepage = "https://github.com/koval01/lovensepy"
Repository = "https://github.com/koval01/lovensepy"
Issues = "https://github.com/koval01/lovensepy/issues"
Documentation = "https://lovensepy.koval-dev.org/"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["lovensepy", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "N815",  # mixedCase - Lovense API uses camelCase (nickName, etc.)
    "N806",  # camelCase variables - API/JSON field names
]

[tool.ruff.lint.isort]
known-first-party = ["lovensepy"]

[tool.ruff.lint.per-file-ignores]
"lovensepy/ble_direct/client.py" = ["E501"]
"lovensepy/ble_direct/standard_compat.py" = ["E501"]

[tool.setuptools.package-data]
lovensepy = ["py.typed"]
"lovensepy.ble_direct" = [
    "toy_config_ble_marketing.json",
    "toy_config_ble_marketing_firmware.json",
]

[tool.setuptools.packages.find]
include = ["lovensepy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "asyncio: async tests (pytest-asyncio)",
]

[tool.coverage.run]
branch = true
source = ["lovensepy"]
omit = [
    "*/tests/*",
]
