[build-system]
requires = ["setuptools>=82.0.0", "wheel>=0.46.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lovensepy"
version = "1.1.3"
description = "Python Lovense API client"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "LovensePy contributors", email = "git@koval-dev.org"}]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "pydantic>=2.12.5",
]
keywords = ["lovense", "api", "iot", "teledildonics", "asyncio", "sdk", "mqtt", "home-assistant", "ble"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
mqtt = [
    "paho-mqtt>=2.1.0",
]
ble = [
    "bleak>=0.22.0",
    "pick>=2.6.0",
]
service = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.42.0",
]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "pylint>=4.0.0",
    "bandit>=1.9.0",
    "pip-audit>=2.7.0,<2.11",
    "build>=1.4.0",
    "paho-mqtt>=2.1.0",
    "bleak>=0.22.0",
    "pick>=2.6.0",
    "semgrep>=1.100.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.42.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocs-static-i18n>=1.3.1",
    "pymdown-extensions>=10.21.0",
]

[project.urls]
Homepage = "https://github.com/koval01/lovensepy"
Repository = "https://github.com/koval01/lovensepy"
Issues = "https://github.com/koval01/lovensepy/issues"
Documentation = "https://lovensepy.koval-dev.org/"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["lovensepy", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "N815",  # mixedCase - Lovense API uses camelCase (nickName, etc.)
    "N806",  # camelCase variables - API/JSON field names
]

[tool.ruff.lint.isort]
known-first-party = ["lovensepy"]

[tool.ruff.lint.per-file-ignores]
"lovensepy/ble_direct/client.py" = ["E501"]
"lovensepy/ble_direct/standard_compat.py" = ["E501"]

[tool.setuptools.package-data]
lovensepy = ["py.typed"]
"lovensepy.ble_direct" = [
    "toy_config_ble_marketing.json",
    "toy_config_ble_marketing_firmware.json",
]

[tool.setuptools.packages.find]
include = ["lovensepy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "asyncio: async tests (pytest-asyncio)",
]

[tool.coverage.run]
branch = true
source = ["lovensepy"]
omit = [
    "*/tests/*",
]
